finish product CRUD
