# internal/models/product.go
@@ -5,7 +5,6 @@ import "go.mongodb.org/mongo-driver/bson/primitive"
 type Product struct {
 	ID          primitive.ObjectID `json:"id" bson:"_id,omitempty"`
 	Title       string             `json:"title" bson:"title"`
-	ProductCode string             `json:"product_code" bson:"productCode"`
 	Price       int                `json:"price" bson:"price"`
 	Description string             `json:"description" bson:"description"`
 }
